ARTEMIS-1498 - Openwire Refactor - fix message groups
Expose setGroupID as top level Message method, as getGroupId already is, and update all.

Expose setGroupSequence and getGroupSequence as a top level Messsage method as is JMS spec defined (behaviour is not) 

Use object pools in open wire message

Update activemq5 unit tests to use artemis-junit (seems class was moved at somepoint)

--- a/tests/activemq5-unit-tests/pom.xml
+++ b/tests/activemq5-unit-tests/pom.xml
@@ -61,6 +61,12 @@
          <version>${project.version}</version>
          <type>test-jar</type>
       </dependency>
+      <dependency>
+         <groupId>org.apache.activemq</groupId>
+         <artifactId>artemis-junit</artifactId>
+         <version>${project.version}</version>
+         <type>test-jar</type>
+      </dependency>
 
       <!-- I imported this to get a mock of a class -->
       <dependency>
