--- a/artemis-server/src/test/resources/cert-users-REGEXP.properties
+++ b/artemis-server/src/test/resources/cert-users-REGEXP.properties
@@ -14,5 +14,5 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-CNODD=DN=TEST_USER_\\d*[13579]
-CNEVEN=DN=TEST_USER_\\d*[02468]
+CNODD=/DN=TEST_USER_\\d*[13579]/
+CNEVEN=/DN=TEST_USER_\\d*[02468]/
