ARTEMIS-1783 add Guava dep in artemis-core-client
This was missed in the work for ARTEMIS-1586.

--- a/artemis-core-client/pom.xml
+++ b/artemis-core-client/pom.xml
@@ -118,6 +118,10 @@
          <groupId>io.netty</groupId>
          <artifactId>netty-common</artifactId>
       </dependency>
+      <dependency>
+         <groupId>com.google.guava</groupId>
+         <artifactId>guava</artifactId>
+      </dependency>
    </dependencies>
 
    <profiles>
