ARTEMIS-1904 Jmx Management Security Tests * Added tests for jmx security

--- a/tests/integration-tests/src/test/resources/users.properties
+++ b/tests/integration-tests/src/test/resources/users.properties
@@ -19,3 +19,7 @@ first=secret
 second=password
 a=a
 b=b
+jmxgooduser=jmxgoodpassword
+jmxuser=jmxuserpassword
+jmxuser1=jmxuserpassword1
+jmxuser2=jmxuserpassword2
