--- a/tests/integration-tests/src/test/resources/login.config
+++ b/tests/integration-tests/src/test/resources/login.config
@@ -279,3 +279,10 @@ amqp-jms-client {
     com.sun.security.auth.module.Krb5LoginModule required
     useKeyTab=true;
 };
+
+jmx-security {
+    org.apache.activemq.artemis.spi.core.security.jaas.PropertiesLoginModule required
+        debug=true
+        org.apache.activemq.jaas.properties.user="users.properties"
+        org.apache.activemq.jaas.properties.role="roles.properties";
+};
