ARTEMIS-2308 Support exporting metrics to Prometheus
This commit adds an integrated implementation of the Prometheus JMX
Exporter (https://github.com/prometheus/jmx_exporter).

An integrated approach was preferrable to running the JMX exporter as a
Java Agent (which is the standard usage pattern) for several reasons.

The JMX Exporter Java Agent starts its own HTTP server, but we already
have an HTTP server available via embedded Jetty. This creates an
additional port to manage (which can be a significant hurdle in some
environments) as well as additional security attack vector. Securing
this web server via SSL requires setting the various Java SSL system
properties which may have undesirable consequences for other components
in the JVM. Also, the various keystore passwords cannot be masked when
set via system properties. Masking passwords is a requirement in many
environments. All these problems go away if the embedded Jetty HTTP
server is used.

The JMX Exporter Java Agent has its own YAML-based configuration file.
For usability's sake it is preferrable to avoid the proliferation of
configuration across different files and formats. All the same
configuration elements available via the individual YAML file are
available via broker.xml.

In general, configuring the Java Agent is a bit clumsy as it requires
command-line changes (e.g. modifying artemis.profile). An integrated
approach avoids these changes.

The RBAC security enforced on the MBean server makes using the Java
Agent difficult without modifications to the way the MBean server is
built/configured. Using an integrated approach reduces those changes
to a few lines.

--- a/artemis-server/pom.xml
+++ b/artemis-server/pom.xml
@@ -132,6 +132,10 @@
          <artifactId>commons-configuration2</artifactId>
       </dependency>
       <dependency>
+         <groupId>io.prometheus</groupId>
+         <artifactId>simpleclient</artifactId>
+      </dependency>
+      <dependency>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
          <version>2.6</version>
