--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
       <version.org.jacoco>0.7.9</version.org.jacoco>
       <version.org.jacoco.plugin>0.7.9</version.org.jacoco.plugin>
       <version.maven.jar.plugin>2.4</version.maven.jar.plugin>
+      <version.prometheus>0.6.0</version.prometheus>
 
       <!-- used on tests -->
       <groovy.version>2.4.3</groovy.version>
@@ -694,6 +695,26 @@
             <groupId>xalan</groupId>
             <artifactId>xalan</artifactId>
             <version>2.7.2</version>
+         </dependency>
+
+         <!-- Needed for Prometheus -->
+         <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_servlet</artifactId>
+            <version>${version.prometheus}</version>
+            <!-- license Apache 2 -->
+         </dependency>
+         <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_hotspot</artifactId>
+            <version>${version.prometheus}</version>
+            <!-- license Apache 2 -->
+         </dependency>
+         <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient</artifactId>
+            <version>${version.prometheus}</version>
+            <!-- license Apache 2 -->
          </dependency>
 
          <dependency>
