--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ docs/hacking-guide/en/_book
 # overlay outpit
 **/overlays/**/*
 artemis-server/.sts4-cache/classpath-data.json
+.vscode/settings.json
